tests/NormalTests/paczka1/small_fuzzy/75884078.err
Error in line 10: ff6sJKOSeI S635 23,19
